--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -1,5 +1,5 @@
 #header {
-	
+	font-weight:400;
 	.topSection {
 		background-color: #e5eef0;
 		color: #93a1a7;
@@ -40,25 +40,33 @@
 		padding:20px 0;
 		height:76px;
 		text-transform: uppercase;
+		font-size: 14.5px;
 		ul{
 			li{
-				padding:0 20px;
+				padding:0px;
 				a{
+					text-decoration: none;
 					color:#93a1a7;
-						&:active{
-							color:#23282f;
-							}
+					padding:20px;
+						.active{
+							color:#000 !important;
+								}
+						&:hover{
+							font-weight: 900;
+								}
 					i{
 						font-size: 12.5px;
 					}
 				}
 			}
 			button{
+				margin-right:5px;
 				background-color: $mainColor;
 				color:#fff;
 				width:141px;
 				height: 38px;
 				border-radius: 19px;
+				padding:0px;
 				font-size: 14.5px;
 			}
 		}
