--- a/assets/scss/partials/_slider.scss
+++ b/assets/scss/partials/_slider.scss
@@ -1,5 +1,36 @@
 #slider {
-	width:1970px;
-	height:200px;
-	background-color: firebrick;
+	.container-fluid {
+		position: relative;
+		height: 750px;
+		background-color: #8B8B8B;
+		color: white;
+		font-family: 'Raleway';
+		text-transform: uppercase;
+		text-align: center;
+		line-height: 30px;
+		h1 {
+			font-size: 48px;
+			font-weight: bold;
+			margin-top: 353px;
+		}
+		p {
+			font-size: 14px;
+			margin-top: 20px;
+		}
+		ul {
+			position:absolute;
+			top:691px;
+			left:900px;
+			li {
+				a {
+					color:rgba(255, 255, 255, 0.3);
+					width: 16px;
+					height: 16px;
+					.active {
+						color: #ffffff !important;
+					}
+				}
+			}
+		}
+	}
 }
