--- a/assets/scss/partials/_startup.scss
+++ b/assets/scss/partials/_startup.scss
@@ -2,19 +2,13 @@
 	.container {
 		margin-top: 100px;
 		line-height: 24px;
+		padding: 0;
 		.col-md-7 {
 			h1 {
-				font-size: 30px;
-				font-family: 'Raleway';
-				font-weight: 900;
-				text-transform: uppercase;
+				@include sectionh1;
 			}
 			h3 {
-				font-size: 18px;
-				font-family: 'Karla';
-				text-transform: uppercase;
-				margin-top: 12px;
-				color: $hColor;
+				@include sectionh3;
 			}
 			p {
 				margin-top: 40px;
@@ -30,24 +24,21 @@
 		}
 		.col-md-5 {
 			div {
-				border:1px solid black;
+				border: 1px solid black;
 				i {
-					display:inline-block;
 					line-height: 67px;
 					text-align: center;
 					width: 67px;
 					height: 67px;
 					background-color: $thirdColor;
-					&:first-child{
-						back-color:$secondaryColor;
+					&:first-child {
+						back-color: $secondaryColor;
 					}
 				}
-				h3{
-					display: inline-block;
+				h3 {
 					margin-left: 99px;
 				}
-				p{
-					display: inline-block;
+				p {
 					margin-left: 99px;
 				}
 			}
