--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,14 +96,12 @@ body {
         #header .menu ul li a i {
           font-size: 12.5px; }
     #header .menu ul button {
-      margin-right: 5px;
       background-color: #29c2e1;
       color: #fff;
-      width: 141px;
-      height: 38px;
-      border-radius: 19px;
-      padding: 0px;
-      font-size: 14.5px; }
+      border-radius: 60px;
+      padding: 13px 21px;
+      font-size: 14.5px;
+      letter-spacing: 1px; }
 
 #slider .container-fluid {
   position: relative;
@@ -222,6 +220,63 @@ body {
         #clients .container-fluid .container .col-md-5 ul li .active {
           background-color: transparent !important;
           color: #29c2e1; }
+
+#features .container-fluid .container {
+  padding-top: 40px; }
+  #features .container-fluid .container .col-md-12 {
+    padding: 60px 0 0 0; }
+    #features .container-fluid .container .col-md-12:last-child {
+      padding-bottom: 138px;
+      border-bottom: 1px solid #e5eef0;
+      background-image: url(../../images/orange-shape.png), url(../../images/blue-shape.png);
+      background-position: bottom right, 90% 100%;
+      background-repeat: no-repeat; }
+    #features .container-fluid .container .col-md-12 h1 {
+      color: #23282f;
+      font-size: 30px;
+      font-weight: 700;
+      font-family: 'Raleway';
+      text-transform: uppercase; }
+    #features .container-fluid .container .col-md-12 > h3 {
+      color: #23282f;
+      font-size: 18px;
+      font-weight: 400;
+      font-family: 'Karla';
+      text-transform: uppercase;
+      margin-top: 12px; }
+    #features .container-fluid .container .col-md-12 .col-md-1 {
+      text-align: center; }
+      #features .container-fluid .container .col-md-12 .col-md-1:first-child {
+        padding-left: 0;
+        margin-left: -2px; }
+      #features .container-fluid .container .col-md-12 .col-md-1 i {
+        background-color: #e5eef0;
+        width: 68px;
+        line-height: 68px;
+        color: #000;
+        font-size: 32px;
+        background-color: #e5eef0; }
+        #features .container-fluid .container .col-md-12 .col-md-1 i:hover {
+          background-color: #f7941d;
+          color: #fff; }
+    #features .container-fluid .container .col-md-12 .col-md-3 {
+      padding-left: 8px; }
+      #features .container-fluid .container .col-md-12 .col-md-3:last-child {
+        padding-right: 0px; }
+      #features .container-fluid .container .col-md-12 .col-md-3 h3 {
+        font-size: 20px;
+        font-family: 'Raleway'; }
+      #features .container-fluid .container .col-md-12 .col-md-3 p {
+        font-size: 14px;
+        font-family: 'Karla';
+        margin-top: 15px; }
+  #features .container-fluid .container button {
+    background-color: #29c2e1;
+    color: #fff;
+    border-radius: 60px;
+    padding: 13px 21px;
+    font-size: 14.5px;
+    letter-spacing: 1px; }
 
 #footer {
   height: 500px; }
