--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -3,4 +3,5 @@ $secondaryColor: #f7941d; //orange
 $thirdColor: #e5eef0; //Lightened Blue
 $pColor: #55595f; //Paragraph Color
 $hColor: #23282f; //Heading Color
+$borderColor: #e6edee;
 $mainWidth: 1140px;
