--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -42,6 +42,7 @@
 		height:76px;
 		text-transform: uppercase;
 		font-size: 14.5px;
+		line-height: 48px;
 		ul{
 			li{
 				padding:0px;
@@ -61,7 +62,7 @@
 				}
 			}
 			button{
-				@include button(13px,21px);
+				@include button(11px,19px);
 			}
 		}
 	}
