--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,6 +352,56 @@ body {
       top: 0px;
       left: 0px; }
 
+#team .container-fluid {
+  background-color: #e5eef0; }
+  #team .container-fluid .container .col-md-12:first-child {
+    margin-top: 100px; }
+    #team .container-fluid .container .col-md-12:first-child h1 {
+      color: #23282f;
+      font-size: 30px;
+      font-weight: 700;
+      font-family: 'Raleway';
+      text-transform: uppercase; }
+    #team .container-fluid .container .col-md-12:first-child h3 {
+      color: #23282f;
+      font-size: 18px;
+      font-weight: 400;
+      font-family: 'Karla';
+      text-transform: uppercase;
+      margin-top: 12px; }
+  #team .container-fluid .container .col-md-12:last-child {
+    margin-top: 38px;
+    margin-bottom: 98px; }
+    #team .container-fluid .container .col-md-12:last-child .col-md-3:first-child {
+      padding-left: 0; }
+    #team .container-fluid .container .col-md-12:last-child .col-md-3:last-child {
+      padding-right: 0; }
+    #team .container-fluid .container .col-md-12:last-child .col-md-3 .member {
+      background-color: #fff; }
+      #team .container-fluid .container .col-md-12:last-child .col-md-3 .member .imgContainer {
+        width: 100%;
+        height: 276px;
+        overflow: hidden; }
+        #team .container-fluid .container .col-md-12:last-child .col-md-3 .member .imgContainer img {
+          width: 100%;
+          height: 276px; }
+      #team .container-fluid .container .col-md-12:last-child .col-md-3 .member .content {
+        padding: 30px 28px 32px 30px; }
+        #team .container-fluid .container .col-md-12:last-child .col-md-3 .member .content h4 {
+          font-family: 'Karla';
+          font-size: 14px;
+          font-weight: bold;
+          text-transform: uppercase;
+          letter-spacing: 1px; }
+        #team .container-fluid .container .col-md-12:last-child .col-md-3 .member .content p {
+          color: #f7941d; }
+        #team .container-fluid .container .col-md-12:last-child .col-md-3 .member .content ul {
+          margin-top: 13px; }
+          #team .container-fluid .container .col-md-12:last-child .col-md-3 .member .content ul a {
+            color: #adbdc1; }
+            #team .container-fluid .container .col-md-12:last-child .col-md-3 .member .content ul a:hover {
+              color: #51666b; }
+
 #footer {
   height: 500px; }
 
