--- a/assets/scss/partials/_mixins.scss
+++ b/assets/scss/partials/_mixins.scss
@@ -15,11 +15,13 @@
 	margin-top: 12px;
 }
 
-@mixin button($vertical,$horizontal){
+@mixin button{
+	text-align: center;
 	background-color: $mainColor;
 	color:#fff;
+	width: 141px;
+	height: 38px;
 	border-radius: 60px;
-	padding:$vertical $horizontal;
 	font-size: 14.5px;
 	letter-spacing: 1px;
 	transition-duration: 0.2s;
