--- a/assets/scss/partials/_pricing.scss
+++ b/assets/scss/partials/_pricing.scss
@@ -54,7 +54,7 @@
 								position: absolute;
 								right: 60px;
 								bottom: 37px;
-								@include button(13px, 28px);
+								@include button;
 							}
 							
 						} //plan
