--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -451,7 +451,71 @@ body {
       #onemonthfree .container-fluid .container ul li:last-child button:hover {
         background-color: #a85e06; }
 
-#footer {
-  height: 500px; }
+#footer .footer {
+  background-image: url(../../images/blue_background.png);
+  background-position: bottom right;
+  background-repeat: no-repeat; }
+  #footer .footer .footerTop {
+    background-image: url(../../images/orange_background.png);
+    background-position: bottom left;
+    background-repeat: no-repeat; }
+    #footer .footer .footerTop .container {
+      padding: 75px 0px 80px 15px;
+      border-bottom: 1px solid #e6edee; }
+      #footer .footer .footerTop .container .col-md-12 {
+        padding-left: 0px; }
+        #footer .footer .footerTop .container .col-md-12:first-child .col-md-1 {
+          padding-left: 0px; }
+        #footer .footer .footerTop .container .col-md-12:first-child h3 {
+          font-size: 18px;
+          font-family: 'Raleway';
+          line-height: 24px;
+          font-weight: 700; }
+        #footer .footer .footerTop .container .col-md-12:last-child {
+          text-transform: uppercase;
+          color: #93a1a7;
+          line-height: 35px;
+          font-family: 'Karla';
+          font-size: 14px;
+          letter-spacing: 2px; }
+          #footer .footer .footerTop .container .col-md-12:last-child a {
+            color: #93a1a7;
+            transition-duration: 0.2s; }
+            #footer .footer .footerTop .container .col-md-12:last-child a:hover {
+              color: black;
+              text-decoration: none; }
+          #footer .footer .footerTop .container .col-md-12:last-child span {
+            color: #000; }
+          #footer .footer .footerTop .container .col-md-12:last-child .newsletter {
+            padding-right: 0px; }
+            #footer .footer .footerTop .container .col-md-12:last-child .newsletter input {
+              display: inline-block;
+              width: 220px;
+              height: 40px;
+              border: 1px solid #29c2e1;
+              padding-left: 19px;
+              color: #93a1a7; }
+            #footer .footer .footerTop .container .col-md-12:last-child .newsletter button {
+              text-align: center;
+              background-color: #29c2e1;
+              color: #fff;
+              width: 141px;
+              height: 38px;
+              border-radius: 60px;
+              font-size: 14.5px;
+              letter-spacing: 1px;
+              transition-duration: 0.2s;
+              border-radius: 0;
+              width: 42px;
+              height: 40px;
+              margin-top: -1px; }
+              #footer .footer .footerTop .container .col-md-12:last-child .newsletter button:hover {
+                background-color: #178ea6; }
+  #footer .footer .footerBottom {
+    padding: 22px 0px 74px 0;
+    text-transform: uppercase;
+    font-family: 'Karla';
+    font-size: 14px;
+    letter-spacing: 2px; }
 
 /*# sourceMappingURL=style.css.map */
