--- a/assets/scss/partials/_pricing.scss
+++ b/assets/scss/partials/_pricing.scss
@@ -2,6 +2,7 @@
 	.container-fluid {
 		.container {
 			.col-md-12 {
+				padding-left:0px;
 				&:first-child {
 					margin-top: 100px;
 					h1 {
